:recycle: refactor: 자유 게시판 사진 처리 (#139)