@@ -1,6 +1,7 @@
 package com.capstone.BnagFer.domain.board.dto.response;
 
 import com.capstone.BnagFer.domain.board.entity.Board;
+import com.capstone.BnagFer.domain.board.entity.BoardImage;
 import com.capstone.BnagFer.domain.board.entity.Comment;
 import lombok.Builder;
 
@@ -15,6 +16,7 @@ public record BoardDetailResponseDto(
         String writerNickName,
         String boardTitle,
         String boardContent,
+        List<BoardImageList> images,
         List<CommentList> commentList,
         Long likeCount,
         Long commentCount
@@ -26,11 +28,13 @@ public record BoardDetailResponseDto(
                 .writerNickName(board.getUser().getProfile().getNickname())
                 .boardTitle(board.getBoardTitle())
                 .boardContent(board.getBoardContent())
+                .images(BoardImageList.from(board.getImages()))
                 .commentList(CommentList.from(board.getComments()))
                 .likeCount(likeCount)
                 .commentCount(commentCount)
                 .build();
     }
+
     @Builder
     public record CommentList(
             Long commentId,
@@ -51,13 +55,32 @@ public record BoardDetailResponseDto(
                     .commentText(comment.getCommentText())
                     .createdAt(comment.getCreatedAt())
                     .updatedAt(comment.getUpdatedAt())
-                    .children(comment.getChildren().stream().map(CommentList::from).collect(Collectors.toList()))
+                    .children(comment.getChildren().stream().map(CommentList::from).toList())
                     //최상위 댓글로만 자식 댓글이 달릴 수 있게!
                     .build();
         }
+
         public static List<CommentList> from(List<Comment> comments) {
-            return comments.stream().filter(c -> c.getParent() == null).map(CommentList::from).collect(Collectors.toList());
+            return comments.stream().filter(c -> c.getParent() == null).map(CommentList::from).toList();
         }
     }
 
+    @Builder
+    public record BoardImageList(
+            Long imageId,
+            String boardImageUrl
+    ){
+        public static BoardImageList from(BoardImage image) {
+            return BoardImageList.builder()
+                    .imageId(image.getId())
+                    .boardImageUrl(image.getImageUrl())
+                    .build();
+        }
+
+        public static List<BoardImageList> from(List<BoardImage> images) {
+            return images.stream()
+                    .map(BoardImageList::from)
+                    .toList();
+        }
+    }
 }
